plugins {
    id "org.gradle.java"
    id "org.gradle.jacoco"
    id "org.gradle.eclipse"
    id "com.scuilion.syntastic" version "0.3.6"
}

group = 'edu.stanford.hivdb'
version = '3.1.2'

description = 'Sierra - Core'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url 'https://dl.bintray.com/hivdb/hivdb'
    }
    maven {
    	url 'https://artifactory.cronapp.io/public-release/'
    }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.10'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'commons-codec:commons-codec:1.14'
    implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
    implementation 'com.google.guava:guava:28.1-jre'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.google.code.gson:gson-extras:2.8.5'
    implementation 'commons-io:commons-io:2.7'
    implementation 'com.codepoetics:protonpack:1.16'
	implementation 'net.sf.jfasta:jfasta:2.2.0'
    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
    implementation 'org.apache.httpcomponents:httpcore:4.4.13'
    implementation 'com.mashape.unirest:unirest-java:1.4.9'
    implementation 'com.neovisionaries:nv-i18n:1.27'
    implementation 'com.amazonaws:aws-java-sdk-lambda:1.11.799'
    implementation 'com.graphql-java:graphql-java:15.0'
    implementation project(':asi_interpreter')
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.mockito:mockito-core:3.3.3'
}

check.dependsOn jacocoTestReport
